--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
-  text-align: center;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  text-decoration: none;
+  color: #424242;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a:hover {
+  color: #212121;
+}
+
+.campaign-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid #ccc;
+  margin-top: 15px;
+  padding: 5px 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.campaign-list {
+  display: flex;
+  flex: 40;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.campaign-detail {
+  display: flex;
+  flex: 60;
+  border-left: 1px solid #ccc;
+  padding-left: 10px;
+}
+
+.campaign-list-item {
+  background: #d7dee4;
+  padding: 5px;
+  width: 100%;
+  border-radius: 2px;
+  margin: 5px 0;
+}
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
